--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FoodOrdringSystem</string>
+    <string name="mobilenumber">MobileNumber</string>
+    <string name="password">password</string>
+    <string name="login">Login</string>
 </resources>
